--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= process.env.LOCALE %>">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" href="<%= process.env.BASE_URL %>static/favicon.ico" />
-  <title>Document</title>
-  <base href="<%= process.env.BASE_URL %>" />
 <body>
   <div id="root"></div>
 </body>
